--- a/API/Personal Dashboard/manifest.json
+++ b/API/Personal Dashboard/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "description": "Just for practicing async JS",
     "action": {
-        "default_icon": "icon.jpg"
+        "default_icon": "icon.png"
     },
     "chrome_url_overrides": {
         "newtab": "index.html"
